Update static and Lambda deploy parameters

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -45,9 +45,9 @@ Parameters:
   PlaySecretsVersion: { Type: String }
   PlaySharedAlbListenerRulePriorityPrefix: { Type: String }
 
-  RadiotopiaTowerLambdaCodeS3ObjectVersion: { Type: String }
+  RadiotopiaTowerLambdaCodeS3ObjectKey: { Type: String }
 
-  S3SigningLambdaCodeS3ObjectVersion: { Type: String }
+  S3SigningLambdaCodeS3ObjectKey: { Type: String }
 
   StyleguideEcrImageTag: { Type: String }
   StyleguideSecretsVersion: { Type: String }
@@ -210,7 +210,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CodeS3Bucket: !Ref DeploymentPackageBucketName
-        CodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -232,7 +232,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         CodeS3Bucket: !Ref DeploymentPackageBucketName
-        CodeS3ObjectVersion: !Ref S3SigningLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref S3SigningLambdaCodeS3ObjectKey
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
       Tags:
