--- a/stacks/apps/radiotopia-tower.yml
+++ b/stacks/apps/radiotopia-tower.yml
@@ -14,7 +14,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   CodeS3Bucket: { Type: String }
-  CodeS3ObjectVersion: { Type: String }
+  CodeS3ObjectKey: { Type: String }
 
 Resources:
   # API
@@ -49,8 +49,7 @@ Resources:
     Properties:
       CodeUri:
         Bucket: !Ref CodeS3Bucket
-        Key: lambda/PRX-tower.radiotopia.fm.zip
-        Version: !Ref CodeS3ObjectVersion
+        Key: !Ref CodeS3ObjectKey
       Description: Radiotopia Radio API v2
       Events:
         ApiRequest:
