--- a/stacks/apps/s3-signing.yml
+++ b/stacks/apps/s3-signing.yml
@@ -10,7 +10,7 @@ Conditions:
 Parameters:
   NotificationsStackName: { Type: String }
   CodeS3Bucket: { Type: String }
-  CodeS3ObjectVersion: { Type: String }
+  CodeS3ObjectKey: { Type: String }
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
@@ -45,8 +45,7 @@ Resources:
     Properties:
       CodeUri:
         Bucket: !Ref CodeS3Bucket
-        Key: lambda/PRX-upload.prx.org.zip
-        Version: !Ref CodeS3ObjectVersion
+        Key: !Ref CodeS3ObjectKey
       Description: !Sub ${EnvironmentType} S3 signing service Lambda function
       Environment:
         Variables:
