--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -105,10 +105,9 @@ Resources:
                     # The location of the built static site archive file in S3
                     bucket = props["StaticSiteArchiveS3Bucket"]
                     key = props["StaticSiteArchiveS3Object"]
-                    version = props["StaticSiteArchiveS3ObjectVersion"]
 
                     # Get the archive object
-                    s3_obj = s3.get_object(Bucket=bucket, Key=key, VersionId=version)
+                    s3_obj = s3.get_object(Bucket=bucket, Key=key)
 
                     unzip_dir = f"/tmp/unzip-{event['RequestId']}"
 
