--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -76,19 +76,18 @@ Parameters:
   GroveSecretsVersion: { Type: String }
   IframelyEcrImageTag: { Type: String }
   IframelySecretsVersion: { Type: String }
-  RadiotopiaTowerLambdaCodeS3ObjectVersion: { Type: String }
-  PixelPrxOrgCodeS3ObjectVersion: { Type: String }
-  UploadLambdaCodeS3ObjectVersion: { Type: String }
-  AnalyticsIngestLambdaCodeS3ObjectVersion: { Type: String }
-  DovetailStitchLambdaCodeS3ObjectVersion: { Type: String }
-  DovetailBytesLambdaCodeS3ObjectVersion: { Type: String }
-  DovetailCountsLambdaCodeS3ObjectVersion: { Type: String }
-  DovetailTrafficLambdaCodeS3ObjectVersion: { Type: String }
-  DovetailCdnArrangerCodeS3ObjectVersion: { Type: String }
-  ProxyPrxOrgCodeS3ObjectVersion: { Type: String }
-  BetaPrxOrgArchiveS3ObjectVersion: { Type: String }
+  RadiotopiaTowerLambdaCodeS3ObjectKey: { Type: String }
+  UploadLambdaCodeS3ObjectKey: { Type: String }
+  AnalyticsIngestLambdaCodeS3ObjectKey: { Type: String }
+  DovetailStitchLambdaCodeS3ObjectKey: { Type: String }
+  DovetailBytesLambdaCodeS3ObjectKey: { Type: String }
+  DovetailCountsLambdaCodeS3ObjectKey: { Type: String }
+  DovetailTrafficLambdaCodeS3ObjectKey: { Type: String }
+  DovetailCdnArrangerCodeS3ObjectKey: { Type: String }
+  ProxyPrxOrgCodeS3ObjectKey: { Type: String }
+  BetaPrxOrgArchiveS3ObjectKey: { Type: String }
   BetaPrxOrgCloudFrontOai: { Type: String }
-  BacksawArchiveS3ObjectVersion: { Type: String }
+  BacksawArchiveS3ObjectKey: { Type: String }
   BacksawCloudFrontOai: { Type: String }
   SharedResourceSharePrincipals: { Type: CommaDelimitedList }
   # Parameter Overrides from the CodePipeline action
@@ -246,8 +245,8 @@ Resources:
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/static-sites/"]]
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
-        BacksawArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
+        BetaPrxOrgArchiveS3ObjectKey: !Ref BetaPrxOrgArchiveS3ObjectKey
+        BacksawArchiveS3ObjectKey: !Ref BacksawArchiveS3ObjectKey
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -271,13 +270,13 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         CastleRedisPrimaryEndPointAddress: !GetAtt CastleStack.Outputs.RedisPrimaryEndPointAddress
-        UploadLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
-        DovetailBytesLambdaCodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
-        DovetailCountsLambdaCodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
-        DovetailTrafficLambdaCodeS3ObjectVersion: !Ref DovetailTrafficLambdaCodeS3ObjectVersion
-        DovetailCdnArrangerCodeS3ObjectVersion: !Ref DovetailCdnArrangerCodeS3ObjectVersion
-        AnalyticsIngestLambdaCodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
-        RadiotopiaTowerLambdaCodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
+        UploadLambdaCodeS3ObjectKey: !Ref UploadLambdaCodeS3ObjectKey
+        DovetailBytesLambdaCodeS3ObjectKey: !Ref DovetailBytesLambdaCodeS3ObjectKey
+        DovetailCountsLambdaCodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
+        DovetailTrafficLambdaCodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
+        DovetailCdnArrangerCodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
+        AnalyticsIngestLambdaCodeS3ObjectKey: !Ref AnalyticsIngestLambdaCodeS3ObjectKey
+        RadiotopiaTowerLambdaCodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -721,7 +720,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
-        CodeS3ObjectVersion: !Ref DovetailStitchLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref DovetailStitchLambdaCodeS3ObjectKey
         PorterSnsArn: !Join ["", ["/prx/", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation], "/dovetail-stitch-lambda/PORTER_SNS_ARN"]]
       Tags:
         - Key: prx:cloudformation:stack-name
@@ -744,7 +743,7 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
-        CodeS3ObjectVersion: !Ref ProxyPrxOrgCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref ProxyPrxOrgCodeS3ObjectKey
         RootStackName: !GetAtt Constants.RootStackName
       Tags:
         - Key: prx:cloudformation:stack-name
@@ -983,9 +982,9 @@ Resources:
         PlaySecretsVersion: !Ref PlaySecretsVersion
         PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
 
-        RadiotopiaTowerLambdaCodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
+        RadiotopiaTowerLambdaCodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
 
-        S3SigningLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+        S3SigningLambdaCodeS3ObjectKey: !Ref UploadLambdaCodeS3ObjectKey
 
         StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
         StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
@@ -1058,7 +1057,7 @@ Resources:
         AugurySecretsVersion: !Ref AugurySecretsVersion
         AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
 
-        BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
+        BetaPrxOrgArchiveS3ObjectKey: !Ref BetaPrxOrgArchiveS3ObjectKey
         BetaPrxOrgCloudFrontOai: !Ref BetaPrxOrgCloudFrontOai
 
         CastleEcrImageTag: !Ref CastleEcrImageTag
@@ -1164,7 +1163,7 @@ Resources:
 
         # App-specific parameters
 
-        BacksawArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
+        BacksawArchiveS3ObjectKey: !Ref BacksawArchiveS3ObjectKey
         BacksawCloudFrontOai: !Ref BacksawCloudFrontOai
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
