--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -6,7 +6,7 @@ Conditions:
 Parameters:
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   EnvironmentType:
     Type: String
@@ -118,8 +118,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: lambda/PRX-dovetail-cdn-arranger.zip
-        S3ObjectVersion: !Ref CodeS3ObjectVersion
+        S3Key: !Ref CodeS3ObjectKey
       Description: Dovetail CDN Arranger
       Environment:
         Variables:
