--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -13,7 +13,7 @@ Parameters:
     Type: String
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   EnvironmentType:
     Type: String
@@ -87,8 +87,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: lambda/PRX-dovetail-counts-lambda.zip
-        S3ObjectVersion: !Ref CodeS3ObjectVersion
+        S3Key: !Ref CodeS3ObjectKey
       Description: Dovetail bytes sent counter
       Environment:
         Variables:
