--- a/stacks/serverless/dovetail-traffic-lambda.yml
+++ b/stacks/serverless/dovetail-traffic-lambda.yml
@@ -4,7 +4,7 @@ Description: Dovetail traffic lambda function
 Parameters:
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   DownloaderBatchSize:
     Type: AWS::SSM::Parameter::Value<String>
@@ -53,8 +53,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: lambda/PRX-dovetail-traffic-lambda.zip
-        S3ObjectVersion: !Ref CodeS3ObjectVersion
+        S3Key: !Ref CodeS3ObjectKey
       Description: Dovetail traffic generator
       Environment:
         Variables:
