--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -14,7 +14,7 @@ Parameters:
     Type: String
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   EnvironmentType:
     Type: String
@@ -310,8 +310,7 @@ Resources:
     Properties:
       CodeUri:
         Bucket: !Ref CodeS3Bucket
-        Key: lambda/PRX-proxy.prx.org.zip
-        Version: !Ref CodeS3ObjectVersion
+        Key: !Ref CodeS3ObjectKey
       Description: !Sub ${EnvironmentType} proxy server
       Environment:
         Variables:
