--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -25,19 +25,19 @@ Parameters:
     Type: String
   CastleRedisPrimaryEndPointAddress:
     Type: String
-  UploadLambdaCodeS3ObjectVersion:
+  UploadLambdaCodeS3ObjectKey:
     Type: String
-  DovetailBytesLambdaCodeS3ObjectVersion:
+  DovetailBytesLambdaCodeS3ObjectKey:
     Type: String
-  DovetailCountsLambdaCodeS3ObjectVersion:
+  DovetailCountsLambdaCodeS3ObjectKey:
     Type: String
-  DovetailTrafficLambdaCodeS3ObjectVersion:
+  DovetailTrafficLambdaCodeS3ObjectKey:
     Type: String
-  DovetailCdnArrangerCodeS3ObjectVersion:
+  DovetailCdnArrangerCodeS3ObjectKey:
     Type: String
-  AnalyticsIngestLambdaCodeS3ObjectVersion:
+  AnalyticsIngestLambdaCodeS3ObjectKey:
     Type: String
-  RadiotopiaTowerLambdaCodeS3ObjectVersion:
+  RadiotopiaTowerLambdaCodeS3ObjectKey:
     Type: String
 Resources:
   UploadLambdaStack:
@@ -55,7 +55,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         CodeS3Bucket:
           Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref UploadLambdaCodeS3ObjectKey
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -74,7 +74,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         CodeS3Bucket:
           Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -90,7 +90,7 @@ Resources:
       Parameters:
         CodeS3Bucket:
           Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref DovetailBytesLambdaCodeS3ObjectKey
         EnvironmentType: !Ref EnvironmentType
       Tags:
         - Key: "prx:cloudformation:stack-name"
@@ -113,7 +113,7 @@ Resources:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         CodeS3Bucket:
           Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         VPCSecurityGroup: !Ref VPCSecurityGroup
@@ -143,7 +143,7 @@ Resources:
       Parameters:
         CodeS3Bucket:
           Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref DovetailTrafficLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
         DownloaderBatchSize: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/DOWNLOADER_BATCH_SIZE"
         ScheduleIntervalMinutes: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/SCHEDULE_INTERVAL_MINUTES"
         MetricsKinesisStream: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/METRICS_KINESIS_STREAM"
@@ -162,7 +162,7 @@ Resources:
       Parameters:
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
-        CodeS3ObjectVersion: !Ref DovetailCdnArrangerCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
         EnvironmentType: !Ref EnvironmentType
         ArrangementsDynamodbAccessRole: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_ACCESS_ROLE
         ArrangementsDynamodbRegion: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_REGION
@@ -185,7 +185,7 @@ Resources:
       Parameters:
         CodeS3Bucket:
           Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
+        CodeS3ObjectKey: !Ref AnalyticsIngestLambdaCodeS3ObjectKey
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         VPCSecurityGroup: !Ref VPCSecurityGroup
