--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -11,7 +11,7 @@ Parameters:
     Type: String
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
 Resources:
   # API
@@ -41,8 +41,7 @@ Resources:
     Properties:
       CodeUri:
         Bucket: !Ref CodeS3Bucket
-        Key: lambda/PRX-tower.radiotopia.fm.zip
-        Version: !Ref CodeS3ObjectVersion
+        Key: !Ref CodeS3ObjectKey
       Description: Radiotopia Radio API v2
       Events:
         ApiRequest:
