--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -16,7 +16,7 @@ Parameters:
     Type: String
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   EnvironmentType:
     Type: String
@@ -49,8 +49,7 @@ Resources:
     Properties:
       CodeUri:
         Bucket: !Ref CodeS3Bucket
-        Key: lambda/PRX-upload.prx.org.zip
-        Version: !Ref CodeS3ObjectVersion
+        Key: CodeS3ObjectKey
       Description: !Sub ${EnvironmentType} S3 signing service Lambda function
       Environment:
         Variables:
