--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -4,7 +4,7 @@ Description: Dovetail stitch lambda function
 Parameters:
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   EnvironmentType:
     Type: String
@@ -105,8 +105,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: lambda/PRX-dovetail-stitch-lambda.zip
-        S3ObjectVersion: !Ref CodeS3ObjectVersion
+        S3Key: !Ref CodeS3ObjectKey
       Description: Dovetail mp3 file stitching
       Handler: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Handler]
       MemorySize: 3008
