--- a/stacks/serverless/dovetail-bytes-lambda.yml
+++ b/stacks/serverless/dovetail-bytes-lambda.yml
@@ -4,7 +4,7 @@ Description: Dovetail bytes lambda function
 Parameters:
   CodeS3Bucket:
     Type: String
-  CodeS3ObjectVersion:
+  CodeS3ObjectKey:
     Type: String
   EnvironmentType:
     Type: String
@@ -51,8 +51,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: lambda/PRX-dovetail-bytes-lambda.zip
-        S3ObjectVersion: !Ref CodeS3ObjectVersion
+        S3Key: !Ref CodeS3ObjectKey
       Description: Dovetail cloudfront bytes logging
       Handler: index.handler
       MemorySize: 128
