Add inline ASG event handling

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -858,6 +858,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackName
+        NotificationsStackName: !Ref NotificationsStackName
         KeyPairName: !Ref AsgKeyPairName
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
